--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <link rel="stylesheet" href="App.css">
+<link rel="stylsheet" href="index.css>
+</head>
 <body>
 <div id="root">
   <div class="App"><div class="min-h-screen bg-gradient-to-br from-dark-blue via-slate-900 to-black text-white font-exo">
